# userworks

./: CMakeLists.txt  README.md  compile.sh
LogicFilter/: CMakeLists.txt  ExprParser.cxx  LogiCalc.cxx  LogicFilter.cxx  Trigger.cxx  TriggerMap.cxx  infixtorpn.cxx
TriggerView/: CMakeLists.txt  ExprParser.cxx  GetTriggerInfo  GetTriggerInfo.cxx  HeartbeatFrameHeader.h  KTimer.cxx  Makefile  SignalParser.cxx  TriggerView.cxx  TriggerViewBook.cxx  UnpackTdc.h
chkfile/: FileHeader.h  Makefile  SubTimeFrameHeader.h  TimeFrameHeader.h  UnpackRecbe.h  checkfilter.cxx  chkcydet.cxx  chkfile.cxx  chkfile_old.cxx  chkraw.cxx
e16/: CMakeLists.txt  DaqServiceConstants.h  MessageUtil.h  TaskProcessorMT.cxx  TaskProcessorMT.h  compile.sh
e16/DqmDST0/: CMakeLists.txt  DqmDST0.cxx  DqmDST0.h
e16/FileSink/: CMakeLists.txt  FileSink.cxx  FileSink.h
e16/Monitor/drs4qdc/: CMakeLists.txt  drs4qdcDqm.cxx
e16/Monitor/gbtxemu/: CMakeLists.txt  DqmGBTxEMU.cxx  DqmGBTxEMU.h
e16/Sampler/: CMakeLists.txt  Sampler.cxx  Sampler.h  TagBroadcaster.cxx  TagBroadcaster.h  TagSubscriber.cxx  TagSubscriber.h
e16/Sampler/drs4qdc/: CMakeLists.txt  drs4qdcSampler.cxx
e16/Sampler/gbtxemu/: CMakeLists.txt  gbtxemuSampler.cxx
e16/Sampler/hul-hrtdc/: CMakeLists.txt  hul_hrtdcSampler.cxx
e16/Sampler/srs-atca/: CMakeLists.txt  srs_atcaSampler.cxx
e16/Sampler/trg/: CMakeLists.txt  trgSampler.cxx
e16/TrgDaqProxy/: CMakeLists.txt  TrgDaqProxy.cxx  TrgDaqProxy.h
elph2018/: BenchmarkSampler.cxx  BenchmarkSampler.h  CMakeLists.txt  FPGAModule.cc  FPGAModule.hh  FileSink.cxx  FileSink.h  HeartbeatFrameHeader.h  HulStrTdcDqm.cxx  HulStrTdcDqm.h  HulStrTdcEmulator.cxx  HulStrTdcEmulator.h  HulStrTdcFilter.cxx  HulStrTdcFilter.h  HulStrTdcSTFBuilder.cxx  HulStrTdcSampler.cxx  HulStrTdcSampler.h  MQSink.cxx  MQSink.h  MessageUtil.h  RAWHeader.h  README.md  RegisterMap.hh  Reporter.cxx  Reporter.h  SubTimeFrameBuilder.cxx  SubTimeFrameBuilder.h  SubTimeFrameHeader.h  TimeFrameBuilder.cxx  TimeFrameBuilder.h  TimeFrameHeader.h  TimeStampFrameHeader.h  TimeStampInserter.cxx  TimeStampInserter.h  Version.h.in  runBenchmarkSampler.cxx  runFileSink.cxx  runHulStrTdcDqm.cxx  runHulStrTdcFilter.cxx  runHulStrTdcSampler.cxx  (+3 more)
elph2018/LinkDef/: stl_vector_vector_LinkDef.h
elph2018/examples/: CMakeLists.txt  README.md
elph2018/examples/Ex1-1/: CMakeLists.txt  Sampler.cxx  Sampler.h  Sink.cxx  Sink.h  ex-1-1.json  runSampler.cxx  runSink.cxx  start-ex-1-1-bg.sh.in  start-ex-1-1-cmd-json.sh.in  start-ex-1-1-cmd.sh.in  start-ex-1-1-json.sh.in  start-ex-1-1.sh.in
elph2018/examples/Filter/: CMakeLists.txt  ExFilter.cxx  ExFilter.h  ExFilter.json  runExFilter.cxx  startExFilter.sh.in
elph2018/examples/Monitor/: CMakeLists.txt  ExMonitor.cxx  ExMonitor.h  ExMonitor.json  runExMonitor.cxx  startExMonitor.sh.in
exam1/: CMakeLists.txt  Processor.cxx  Sink.cxx  Sink_1.cxx  Splitter.h  Worker.cxx  Worker_2.cxx  event.h
exam2/: CMakeLists.txt  NullDevice.h  Sampler.cxx  Sampler.h  Sink.cxx  Sink.h  Worker.cxx  check_hit.cxx  coincidence.cxx  dtdcSampler.cxx  dtdcSink.cxx  dtdcSink.h  dtdcWorker.cxx  dtdcWorker.h  dtdc_event.h  dummySampler.cxx  dummySink.cxx  ebuf_to_pch.cxx  ebuf_to_pdata.cxx  hexdump.cxx  make_dummy_dataset.cxx  make_event_buffer.cxx  make_event_buffer_1.cxx  mstopwatch.cxx  ustopwatch.cxx
exam2/ec2/: CMakeLists.txt  NullDevice.cxx  Sampler.cxx  Sampler.h  Worker_1.cxx  dummySampler.cxx  runSplitter.cxx
exam3/: CMakeLists.txt  CMakeLists_1.txt  FilterHeader.h  HexDump.h  SubTimeFrameHeader.h  TimeFrameHeader.h  UnpackTdc.h  chkfile.cxx  filter.cxx  fltcoin.cxx  fltcoin_1.cxx  fltcoin_2.cxx  sink.cxx  stfbuilder.cxx  stfbuilder.cxx.orig  stfbuilder.h  tdcemulator.cxx  tdcemulator.cxx.orig  tdcemulator.h  tfbuilder.cxx  tfbuilder.h  tfdump.cxx  trigger.cxx
exam4/: CMakeLists.txt  FileSinkHeaderBlock.h  FilterHeader.h  HexDump.h  LogiCalc.cxx  README.md  STFBFilePlayer.cxx  STFBFilePlayer.cxx.orig  STFBFilePlayer.h  SubTimeFrameHeader.h  TFBFilePlayer.cxx  TimeFrameBuilder.cxx  TriggerMap.cxx  chkfile.cxx  fltcoin.cxx  onlinedisplay.cxx  tfdump.cxx  trigger.cxx
exam5/: CMakeLists.txt  FileSinkHeader.h  FilterHeader.h  FltTdc.h  LogicFilter.cxx  README.md  SignalParser.cxx  SubTimeFrameHeader.h  TFBFilePlayer.cxx  TimeFrameHeader.h  Trigger.cxx  chkfile.cxx  fltcoin.cxx  flttrig.cxx  hexdumptest.cxx  infixtorp.cxx  tfdump.cxx
exam5/unused/: HulStrTdcData.h  STFBFilePlayer.cxx.orig  STFBFilePlayer_1.cxx  STFBFilePlayer_3.cxx  fltcoin_1.cxx
exam6/: AmQStrTdcData.h  CMakeLists.txt  ChunkHeader.cxx  FileSinkHeader.h  FileSinkTrailer.h  LogicFilter.cxx  STFBFilePlayer.cxx  TFBFilePlayer.cxx  TimeFrameBuilder.cxx  TimeFrameHeader.h  Trigger.cxx  TriggerView.cxx  TriggerViewBook.cxx  UnpackTdc.h  chkfile.cxx  fltcoin.cxx  flttrig.cxx  gbookhist.cxx  onlinedisplay.cxx  tfdump.cxx
hdtbl/: CMakeLists.txt  FilterHeader.h  SubTimeFrameHeader.h  TimeFrameHeader.h  gbookhist.cxx  hdtbldisplay.cxx  sdbookhist.cxx
recbe/: CMakeLists.txt  CliSock.cxx  DummySampler.cxx  RBCP.cxx  RaiRawSampler.cxx  RecbeDisplay.cxx  RecbeSampler.cxx  RecbeSink.cxx  RecbeTimeFrameBuilder.cxx  RedisDataStore.h  Slowdashify.h  TimeFrameBuilder.cxx  TimeFrameBuilder.h  UnpackRecbe.cxx  UnpackRecbe.h  UnpackTdc.h  drecbe.cxx  gHistRecbe.cxx  ghistogram.cxx  hexdump.cxx  rairaw.h  rairaw.txt  rawdump.cxx  recbe.h  uhbook.cxx
recbe/kol/: CMakeLists.txt  Makefile  README.md  design.htm  design.md  ex1.cpp  example.htm  example.md  kolsocket.cpp  kolsocket.h  koltcp.cpp  koltcp.h  koltcp.txt  kolthread.cpp  kolthread.h  koluri.cpp  koluri.h
recbe/utility/: MessageUtil.h
redisperf/: Makefile  redisperf.cxx
run/: auto_change_run.sh  daq.py  daq.sh  daq_1.sh  dcon.sh  del_daqservice.sh  drecbe.sh  go.sh  init.sh  ip_recbe.txt  livecheck.sh  mq-param-e50_1.sh  mq-param.sh  param_flttrig.sh  param_ip.sh  param_recbe.sh  param_recbe_trigemu.sh  raris_trigger.sh  run.sh  runrun.sh  start_device.sh  stfplay.sh  tfplay.sh  topo.sh  topo_player.sh  topo_recbe.sh  topo_stfplay.sh  topo_tfplay.sh  topo_tfplay_demo.sh  triggerlogic.sh  (+8 more)
(+64 files in other folders)
